[package]
name = "ranger-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.26" # for handling terminal input/output
async-std = "1.10" # for asynchronous file operations
serde = { version = "1.0", features = [
    "derive",
] } # for serialization, useful for settings
serde_json = "1.0" # for saving settings in JSON format
tui = "0.18" # terminal UI library for Rust
dirs = "3.0" # for getting the user's home directory
